test/parser/error/err_24_for_var_not_var.pl0
program p; 
const c:=1; 
begin 
for c := 1 to 10 do 
end